--- a/index.html
+++ b/index.html
@@ -7,95 +7,286 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- css -->
   <link rel="stylesheet" href="style.css">
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Lato:wght@100&display=swap" rel="stylesheet">
   <!-- boostrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- title -->
   <title>Carta - Shop el Panal</title>
 </head>
+
 <body>
-
-
-  <div class="accordion containerr" id="accordionPanelsStayOpenExample">
-    <!-- DESAYUNOS Y MERIENDAS -->
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-        <button class="accordion-button desayunos collapsed" type="button" data-bs-toggle="collapse"
-          data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
-          DESAYUNOS Y MERIENDAS
-        </button>
-      </h2>
-      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse"
-        aria-labelledby="panelsStayOpen-headingOne">
-        <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin
-          adds the appropriate classes that we use to style each element. These classes control the overall appearance,
-          as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or
-          overriding our default variables. It's also worth noting that just about any HTML can go within the
-          <code>.accordion-body</code>, though the transition does limit overflow.
+  <header>
+    <div>
+      <h1>
+        ---- CATEGORIAS ----
+      </h1>
+    </div>
+  </header>
+  <article>
+    <div class="accordion containerr" id="accordionPanelsStayOpenExample">
+      <!-- DESAYUNOS Y MERIENDAS -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+          <button class="accordion-button desayunos collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseOne">
+            DESAYUNOS Y MERIENDAS
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingOne">
+          <div class="accordion-body">
+            <div class="TituloDulces">
+              <h3>Combos</h3>
+            </div>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Desayuno simple ------------</h5>
+                <p class="precio"> $700</p>
+              </div>
+              <p class="descripcion">Infusión - 2 medialunas o criollos</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Desayuno completo ---------</h5>
+                <p class="precio"> $800</p>
+              </div>
+              <p class="descripcion">Infusión - 2 medialunas o criollos - manteca y dulce de leche - jugo de naranja</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Desayuno light --------------</h5>
+                <p class="precio"> $900</p>
+              </div>
+              <p class="descripcion">Infusión - 2 tostadas de pan blanco o integral - mermelada y queso - jugo de
+                naranja</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Desayuno proteico ----------</h5>
+                <p class="precio"> $1300</p>
+              </div>
+              <p class="descripcion">Infusión - 2 tostadas de pan blanco o integral - 2 fetas de jamón y queso - huevos
+                revueltos - jugo de naranja</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Desayuno de campo ---------</h5>
+                <p class="precio"> $1100</p>
+              </div>
+              <p class="descripcion">Infusión - 1 criollo - pan de campo - 2 fetas de jamón y queso - manteca y dulce de
+                leche - jugo de naranja</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Infusión con tostado --------</h5>
+                <p class="precio"> $1300</p>
+              </div>
+              <p class="descripcion">Infusión - tostado de jamon y queso</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Infusión con mini torta ------</h5>
+                <p class="precio"> $1100</p>
+              </div>
+              <p class="descripcion">Infusión - mini torta (pasta frola - brownie - alfajor de maicena - bizcochuelo de
+                vainilla)</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">infusion con croissant -------</h5>
+                <p class="precio"> $1100</p>
+              </div>
+              <p class="descripcion">Infusión - Gran croissant de jamón y queso</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Licuado - 2 panificados ------</h5>
+                <p class="precio"> $950</p>
+              </div>
+              <p class="descripcion">Licuado (banana, durazno, frutilla) - 2 meidalunas o criollos</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Licuado con tostado --------</h5>
+                <p class="precio"> $1660</p>
+              </div>
+              <p class="descripcion">Licuado (banana, durazno, frutilla) - 2 meidalunas o criollos</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">jugo naranja - panificados ---</h5>
+                <p class="precio"> $900</p>
+              </div>
+              <p class="descripcion">Licuado (banana, durazno, frutilla) - 2 meidalunas o criollos</p>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">jugo naranja - tostado ------</h5>
+                <p class="precio"> $1100</p>
+              </div>
+              <p class="descripcion">Licuado (banana, durazno, frutilla) - 2 meidalunas o criollos</p>
+            </li>
+            <!-- Desayunos/Dulces -->
+            <div class="TituloDulces">
+              <h3>Dulces</h3>
+            </div>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Medialuna -------------------</h5>
+                <p class="precio"> $150</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Criollo ----------------------</h5>
+                <p class="precio"> $150</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Brownie --------------------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Alfajor de maicena ----------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Pasta frola ------------------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Bizcochuelo vainilla ---------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Alfajor mendocino ----------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+            <!-- Desayunos/Cafetería -->
+            <div class="TituloDulces">
+              <h3>Cafetería</h3>
+            </div>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Doble -----------------------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Jarrito ----------------------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Pocillo ----------------------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Licuado ---------------------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Jugo de naranja --------------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+            <li>
+              <div class="tituloYprecio">
+                <h5 class="titulo">Submarino ------------------</h5>
+                <p class="precio"> $$$$</p>
+              </div>
+            </li>
+          </div>
+        </div>
+      </div>
+      <!-- ALMUERZO -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+          <button class="accordion-button almuerzo collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseTwo">
+            ALMUERZO
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingTwo">
+          <div class="accordion-body">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse
+            plugin
+            adds the appropriate classes that we use to style each element. These classes control the overall
+            appearance,
+            as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or
+            overriding our default variables. It's also worth noting that just about any HTML can go within the
+            <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <!-- BEBIDAS -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+          <button class="accordion-button bebidas collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseThree">
+            BEBIDAS
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingThree">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin
+            adds the appropriate classes that we use to style each element. These classes control the overall
+            appearance,
+            as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or
+            overriding our default variables. It's also worth noting that just about any HTML can go within the
+            <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <!-- SANDWICHES -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+          <button class="accordion-button sandwich collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseFour">
+            SANDWICHES
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingFour">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin
+            adds the appropriate classes that we use to style each element. These classes control the overall
+            appearance,
+            as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or
+            overriding our default variables. It's also worth noting that just about any HTML can go within the
+            <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
         </div>
       </div>
     </div>
-    <!-- ALMUERZO -->
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-        <button class="accordion-button almuerzo collapsed" type="button" data-bs-toggle="collapse"
-          data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-          ALMUERZO
-        </button>
-      </h2>
-      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
-        aria-labelledby="panelsStayOpen-headingTwo">
-        <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin
-          adds the appropriate classes that we use to style each element. These classes control the overall appearance,
-          as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or
-          overriding our default variables. It's also worth noting that just about any HTML can go within the
-          <code>.accordion-body</code>, though the transition does limit overflow.
-        </div>
-      </div>
-    </div>
-    <!-- BEBIDAS -->
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-        <button class="accordion-button bebidas collapsed" type="button" data-bs-toggle="collapse"
-          data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-          aria-controls="panelsStayOpen-collapseThree">
-          BEBIDAS
-        </button>
-      </h2>
-      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
-        aria-labelledby="panelsStayOpen-headingThree">
-        <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin
-          adds the appropriate classes that we use to style each element. These classes control the overall appearance,
-          as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or
-          overriding our default variables. It's also worth noting that just about any HTML can go within the
-          <code>.accordion-body</code>, though the transition does limit overflow.
-        </div>
-      </div>
-    </div>
-    <!-- SANDWICHES -->
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="panelsStayOpen-headingFour">
-        <button class="accordion-button sandwich collapsed" type="button" data-bs-toggle="collapse"
-          data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
-          aria-controls="panelsStayOpen-collapseFour">
-          SANDWICHES
-        </button>
-      </h2>
-      <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
-        aria-labelledby="panelsStayOpen-headingFour">
-        <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin
-          adds the appropriate classes that we use to style each element. These classes control the overall appearance,
-          as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or
-          overriding our default variables. It's also worth noting that just about any HTML can go within the
-          <code>.accordion-body</code>, though the transition does limit overflow.
-        </div>
-      </div>
-    </div>
-  </div>
+  </article>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
